--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,14 @@
-title: Minimal theme
+title: Atanu Dutta
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: 
+  <p align="center">
+  <a href="https://www.linkedin.com/in/atanudutta/">LinkedIn</a> |
+  <a href="https://github.com/atanudutta-git">GitHub</a>
+
+  <br>   
+  I'm working as Sr Manager Marketing Analytics
+  <br>
+  </p>
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
