--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Atanu Dutta
-logo: /assets/img/logo.png
+logo: /assets/img/Atanu Dutta Badge Pic blue.jpg
 description: 
   <p align="center">
   <a href="https://www.linkedin.com/in/atanudutta/">LinkedIn</a> |
